[package]
name = "progle-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.27.0"
shuttle-runtime = "0.27.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.27.0"
tokio = "1.26.0"
tracing = "0.1.37"
pom = "3.3.0"
shuttle-shared-db = {version = "0.27.0", features = ["postgres"]}
sqlx = "0.7.1"
chrono = "0.4.31"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
lettre = "0.11.3"
